zbiorcze nanoszenie zmiennych i składników

--- a/kadry/src/main/webapp/admin/index.xhtml
+++ b/kadry/src/main/webapp/admin/index.xhtml
@@ -39,6 +39,7 @@
                                 <p:menuitem icon="pi pi-cloud" value="urlop/choroba/ekwiw." style="width: 150px" onclick="PF('dialgoczaspracyurlop').show()" async="true"/>
                                 <p:menuitem icon="pi pi-sitemap" value="zbiorcze rach. do zlec." style="width: 150px" onclick="PF('dialogzbiorczerachunekzlecenia').show()" async="true"/>
                                 <p:menuitem icon="pi pi-money-bill" value="wprowadz. zmiennych" style="width: 150px" onclick="PF('dialogbiorczezmienne').show()" async="true"/>
+                                <p:menuitem icon="pi pi-th-large" value="wprowadz. składników" style="width: 150px" onclick="PF('dialogbiorczeskladniki').show()" async="true"/>
                                 <p:menuitem icon="pi pi-sliders-h" value="nadgodziny niemcy" style="width: 150px" onclick="PF('dialognadgodzinyniemcy').show()" async="true"/>
                                 <p:menuitem icon="pi pi-file-excel" value="wystaw. rach. do zlec." style="width: 150px" onclick="PF('dialograchunekzlecenia').show()" async="true"/>
                                 <p:menuitem icon="pi pi-calendar" value="kalendarz pracownika" style="width: 150px" onclick="PF('dialogkalendarzmiesiac').show()" async="true"/>
@@ -240,6 +241,7 @@
                 <ui:include src="sub/dialog/dialog_zbiorcze_rachunek_zlecenia.xhtml"/>
                 <ui:include src="sub/dialog/dialog_zbiorcze_wprowadzaniezmiennych.xhtml"/>
                 <ui:include src="sub/dialog/dialog_zbiorcze_zmienne.xhtml"/>
+                <ui:include src="sub/dialog/dialog_zbiorcze_skladniki.xhtml"/>
                 <ui:include src="sub/dialog/dialog_nadgodziny_niemcy.xhtml"/>
                 <ui:include src="sub/dialog/dialog_komornik.xhtml"/>
                 <!--                <ui:include src="sub/dialog/dialog_paski_oddelegowanie.xhtml"/>-->
