zbiorcze nanoszenie zmiennych i składników

--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_czaspracy_kalendarzmiesiac.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_czaspracy_kalendarzmiesiac.xhtml
@@ -89,7 +89,7 @@
                     <h:form  styleClass="formadmin" id="KalendarzmiesiacCreateRokForm">
                         <p:panelGrid columns="2">
                             <p:outputLabel value="generuj kalendarz za rok" for="rokkal" />
-                            <p:commandButton id="rokkal" value="generuj" styleClass="buttonnorm" global="true" actionListener="#{kalendarzmiesiacView.generujrok()}" update="KalendarzmiesiacSaRokForm KalendarzmiesiacListForm"/>
+                            <p:commandButton id="rokkal" value="generuj" styleClass="buttonnorm" global="true" actionListener="#{kalendarzmiesiacView.zrobkal()}" update="KalendarzmiesiacSaRokForm KalendarzmiesiacListForm"/>
                         </p:panelGrid>
                     </h:form>
                 </p:panelGrid>
